log
Sun, May  4, 2025 12:26:00 PM: 
 treemap.c | 110 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 100 insertions(+), 10 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Sun, May  4, 2025 12:26:48 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
f140678
Sun, May  4, 2025 12:27:38 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
2e874e3
Sun, May  4, 2025 12:28:14 PM: 
 tests:  27|1
total_score: 60/70
80f0c17
Sun, May  4, 2025 12:30:52 PM: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  27|1
total_score: 60/70
7486e9b
Sun, May  4, 2025 12:34:15 PM: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  27|1
total_score: 60/70
0480895
Sun, May  4, 2025 12:37:17 PM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  27|1
total_score: 60/70
e0fc78a
Sun, May  4, 2025 12:43:56 PM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  21|2
total_score: 45/70
27699a6
Sun, May  4, 2025 12:44:34 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  29|0
total_score: 70/70
d813f9c
Sun, May  4, 2025 12:48:32 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  27|1
total_score: 60/70
965f7a4
